--- a/src/main/resources/org/example/primary.fxml
+++ b/src/main/resources/org/example/primary.fxml
@@ -7,11 +7,11 @@
 
 <VBox alignment="CENTER" spacing="20.0" prefHeight="500" prefWidth="500" xmlns="http://javafx.com/javafx/8.0.171"
       xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.PrimaryController">
-<!--    <children>-->
-<!--        <Label text="Primary View"/>-->
-<!--        <Button fx:id="primaryButton" text="Switch to Secondary View" onAction="#switchToSecondary"/>-->
-<!--    </children>-->
-<!--    <padding>-->
-<!--        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>-->
-<!--    </padding>-->
+    <children>
+        <Label text="Primary View"/>
+        <Button fx:id="primaryButton" text="Switch to Secondary View" onAction="#switchToSecondary"/>
+    </children>
+    <padding>
+        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
+    </padding>
 </VBox>
