--- a/src/main/resources/org/example/primary.fxml
+++ b/src/main/resources/org/example/primary.fxml
@@ -6,7 +6,7 @@
 <?import javafx.geometry.Insets?>
 
 <VBox alignment="CENTER" spacing="20.0" prefHeight="500" prefWidth="500" xmlns="http://javafx.com/javafx/8.0.171"
-      xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.PrimaryController">
+      xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.ui.PrimaryController">
     <children>
         <Label text="Primary View"/>
         <Button fx:id="primaryButton" text="Switch to Secondary View" onAction="#switchToSecondary"/>
